<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ActivityGetStarted">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitStart"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:gravity="center"
                    android:text="@string/text_getting_started"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    tools:ignore="MissingPrefix" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_pic"
                        android:tint="@color/white"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="1dp" />

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="28dp"
                        android:elevation="4dp"
                        android:gravity="center_horizontal"
                        android:indeterminateTint="@color/purple_500"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="33dp"
                        android:fontFamily="@font/gotham"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/gotham"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham"
                        android:hint="@string/username"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLength="25"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/gotham"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham"
                        android:hint="@string/txt_date_of_birth"
                        android:importantForAutofill="no"
                        android:inputType="date"
                        android:maxLength="25"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/gotham"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham"
                        android:hint="@string/txt_cell_number"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/gotham"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:visibility="gone">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham"
                        android:hint="@string/txt_location"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:visibility="gone" />

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="7dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/radio_button_selector"
                        android:fontFamily="@font/gotham"
                        android:text="@string/Female"
                        android:textColor="@drawable/radio_button_color_selector" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/radio_button_selector"
                        android:fontFamily="@font/gotham"
                        android:text="@string/male"
                        android:textColor="@drawable/radio_button_color_selector" />

                </RadioGroup>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/et_ui"
                        android:fontFamily="@font/gotham"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/terms_amp_conditions_settings"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gotham"
                        android:text="@string/txt_amp"
                        android:textColor="@color/white" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/et_ui"
                        android:fontFamily="@font/gotham"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/user_privacy_policy"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_shape_white"
                    android:fontFamily="@font/gotham"
                    android:padding="10dp"
                    android:text="@string/btn_save"
                    android:textAllCaps="false"
                    android:textColor="#FFF"
                    android:textSize="18sp" />

            </LinearLayout>

        </FrameLayout>

    </ScrollView>

</FrameLayout>
