<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ActivityForgotPassword">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/gotham"
        android:padding="10dp"
        android:text="@string/we_need_your_registered_email_address_to_send_reset_password_instructions"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progress_bar_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple_200"
        android:visibility="gone"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/gotham"
        android:hint="@string/email_address_forgot_password"
        android:textColor="#c2c3c8"
        android:textColorHint="#c2c3c8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/gotham"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:textColor="#c2c3c8"
            android:textSize="18sp"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="34dp"
        android:baselineAligned="false"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_backToLogin_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_shape_white"
                android:fontFamily="@font/gotham"
                android:text="@string/back_to_login_on_forgot"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_submit_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_shape_white"
                android:fontFamily="@font/gotham"
                android:text="@string/submit_forgot_password"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>